test/corpus/arg.txt
==================
arg command
==================

ARG foo

---

(source_file
  (arg_command
    name: (variable)))

==================
arg command required
==================

ARG --required foo

---

(source_file
  (arg_command
    required: (required)
    name: (variable)))

==================
arg command global
==================

ARG --global foo

---

(source_file
  (arg_command
    global: (global)
    name: (variable)))

==================
arg command default value
==================

ARG foo=aaa

---

(source_file
  (arg_command
    name: (variable)
    default_value: (unquoted_string)))

==================
arg command default value single quoted
==================

ARG foo='auie tsrn'

---

(source_file
  (arg_command
    name: (variable)
    default_value: (single_quoted_string)))

==================
arg command default value double quoted
==================

ARG foo="it's ok"

---

(source_file
  (arg_command
    name: (variable)
    default_value: (double_quoted_string)))

==================
arg command default value expr
==================

ARG foo=$(echo $(echo hop))

---

(source_file
  (arg_command
    name: (variable)
    default_value_expr: (expr)))
