test/corpus/build.txt
==================
build command
==================

foo:
  BUILD +build

---

    (source_file
      (target
        name: (identifier)
        (build_command
          (target_ref
            name: (identifier)))))

==================
build command with options
==================

foo:
  BUILD \
    --platform=linux/amd64 \
    --platform linux/arm64 \
    +build

---

    (source_file
      (target
        name: (identifier)
        (build_command
          (line_continuation)
          option: (platform
            value: (string
              (unquoted_string)))
          (line_continuation)
          option: (platform
            value: (string
              (unquoted_string)))
          (line_continuation)
          (target_ref
            name: (identifier)))))

==================
build command with expansions
==================

foo:
  BUILD \
    --platform=linux/$arch \
    --platform $os/arm64 \
    +build-$bar

---

    (source_file
      (target
        name: (identifier)
        (build_command
          (line_continuation)
          option: (platform
            value: (string
              (unquoted_string
                (expansion
                  (variable)))))
          (line_continuation)
          option: (platform
            value: (string
              (unquoted_string
                (expansion
                  (variable)))))
          (line_continuation)
          (target_ref
            name: (identifier
              (expansion
                (variable)))))))

==================
build command with bracket expansions
==================

foo:
  BUILD \
    --platform=linux/${arch}64 \
    --platform ${os_arch}64 \
    +${bar}

---

    (source_file
      (target
        name: (identifier)
        (build_command
          (line_continuation)
          option: (platform
            value: (string
              (unquoted_string
                (expansion
                  (variable)))))
          (line_continuation)
          option: (platform
            value: (string
              (unquoted_string
                (expansion
                  (variable)))))
          (line_continuation)
          (target_ref
            name: (identifier
              (expansion
                (variable)))))))

==================
build command with target expansion
==================

foo:
  BUILD ${target}

---

    (source_file
      (target
        name: (identifier)
        (build_command
          (string
            (unquoted_string
              (expansion
                (variable)))))))

==================
build command deprecated build arg
==================

foo:
  BUILD --build-arg foo=bar +foo

---

    (source_file
      (target
        name: (identifier)
        (build_command
          option: (build_arg_deprecated
            value: (string
              (unquoted_string)))
          (target_ref
            name: (identifier)))))

==================
build command with empty build arg
==================

foo:
  BUILD +build --foo=

---

    (source_file
      (target
        name: (identifier)
        (build_command
          (target_ref
            name: (identifier))
          (build_arg
            name: (variable)))))
