test/corpus/cache.txt
==================
cache command
==================

foo:
  CACHE --persist /foo

---

    (source_file
      (target
        name: (identifier)
        (cache_command
          option: (persist)
          mount_point: (string
            (unquoted_string)))))
