test/corpus/do.txt
==================
do command
==================

foo:
  DO +hop --foo=bar

---

    (source_file
      (target
        name: (identifier)
        (do_command
          (function_ref
            name: (immediate_identifier))
          (build_arg
            name: (immediate_identifier)
            value: (unquoted_string)))))
