test/corpus/env.txt
==================
env command
==================

foo:
  ENV foo=bar

---

    (source_file
      (target
        name: (identifier)
        (env_command
          key: (variable)
          value: (unquoted_string))))

==================
env command with spaces around =
==================

foo:
  ENV foo = bar

---

    (source_file
      (target
        name: (identifier)
        (env_command
          key: (variable)
          value: (unquoted_string))))

==================
env command without =
==================

foo:
  ENV foo bar

---

    (source_file
      (target
        name: (identifier)
        (env_command
          key: (variable)
          value: (unquoted_string))))
