test/corpus/expose.txt
==================
expose command
==================

foo:
  EXPOSE 22/tcp 1234

---

    (source_file
      (target
        name: (identifier)
        (expose_command
          (port
            (number)
            protocol: (identifier))
          (port
            (number)))))
