test/corpus/from.txt
==================
from image
==================

FROM alpine

---

(source_file
    (from_command
    (image_spec
        name: (image_name))))

==================
from image with tag
==================

FROM alpine:3.16

---

(source_file
    (from_command
    (image_spec
        name: (image_name)
        tag: (image_tag))))


==================
from image with sha256
==================

FROM alpine@sha256:1b8ca66c591b771984d1e562aac281cd2b2e950c124e35b5b0fe7e2147c6f0e2

---

(source_file
    (from_command
    (image_spec
        name: (image_name)
        digest: (image_digest))))

==================
from target
==================

FROM +build

---

(source_file
    (from_command
        (target_ref
            name: (identifier))))

==================
from target with build arg
==================

FROM +build --foo=bar

---

(source_file
    (from_command
        (target_ref
            name: (identifier))
        (build_arg
            name: (variable)
          value: (string
            (unquoted_string)))))

==================
from target with space build arg
==================

FROM +build --foo bar

---

(source_file
    (from_command
        (target_ref
            name: (identifier))
        (build_arg
            name: (variable)
          value: (string
            (unquoted_string)))))

==================
from target with platform
==================

FROM --platform=linux/arm64 +build

---
    (source_file
      (from_command
        option: (platform
          value: (string
            (unquoted_string)))
        (target_ref
          name: (identifier))))

==================
from target with space platform
==================

FROM --platform linux/arm64 +build

---
    (source_file
      (from_command
        option: (platform
          value: (string
            (unquoted_string)))
        (target_ref
          name: (identifier))))

==================
from target with allow privileged
==================

FROM --allow-privileged +build

---
    (source_file
      (from_command
        option: (allow_privileged)
        (target_ref
          name: (identifier))))
