test/corpus/from_dockerfile.txt
==================
from dockerfile command
==================

foo:
  FROM DOCKERFILE ./

---

    (source_file
      (target
        name: (identifier)
        (from_dockerfile_command
          context: (string
            (unquoted_string)))))

==================
from dockerfile command with options
==================

foo:
  FROM DOCKERFILE \
    -f Dockerfile.backend \
    --build-arg version=1.2.3 \
    --target prod \
    ./

---

    (source_file
      (target
        name: (identifier)
        (from_dockerfile_command
          (line_continuation)
          option: (docker_file
            value: (string
              (unquoted_string)))
          (line_continuation)
          option: (docker_build_arg
            key: (identifier)
            value: (string
              (unquoted_string)))
          (line_continuation)
          option: (docker_target
            value: (identifier))
          (line_continuation)
          context: (string
            (unquoted_string)))))
