test/corpus/host.txt
==================
host command
==================
foo:
  HOST foo.example.com 127.0.0.1

---

    (source_file
      (target
        name: (identifier)
        (block
          (host_command
            name: (string
              (unquoted_string))
            ip: (string
              (unquoted_string))))))
