test/corpus/if.txt
==================
if command
==================

foo:
    IF true
        RUN echo "true"
    END

---

    (source_file
      (target
        name: (identifier)
        (if_command
          condition: (shell_fragment)
          (run_command
            command: (shell_fragment)))))

==================
if command with else block
==================

foo:
    IF true
        RUN echo "true"
    ELSE
        RUN echo "false"
    END

---

    (source_file
      (target
        name: (identifier)
        (if_command
          condition: (shell_fragment)
          (run_command
            command: (shell_fragment))
          else: (else_block
            (run_command
              command: (shell_fragment))))))

==================
if command with else if and else blocks and options
==================

foo:
    IF --ssh true
        RUN echo "true"
    ELSE IF true
        RUN echo "true"
    ELSE IF --no-cache true
        RUN echo "true"
    ELSE
        RUN echo "false"
    END

---

    (source_file
      (target
        name: (identifier)
        (if_command
          option: (ssh)
          condition: (shell_fragment)
          (run_command
            command: (shell_fragment))
          else_if: (else_if_block
            condition: (shell_fragment)
            (run_command
              command: (shell_fragment)))
          else_if: (else_if_block
            option: (no_cache)
            condition: (shell_fragment)
            (run_command
              command: (shell_fragment)))
          else: (else_block
            (run_command
              command: (shell_fragment))))))
