test/corpus/import.txt
==================
import command
==================

IMPORT github.com/earthly/lib/rust

---

    (source_file
      (import_command
        (earthfile_ref
          (path))))

==================
import command alias
==================

IMPORT github.com/earthly/lib/rust AS rust

---

    (source_file
      (import_command
        (earthfile_ref
          (path))
        alias: (identifier)))
