test/corpus/run.txt
==================
run
==================

foo:
    RUN echo foo

---

    (source_file
      (target
        name: (identifier)
        (run_command
          command: (shell_fragment))))

==================
run with options
==================

foo:
    RUN --push --secret api_key echo foo

---

    (source_file
      (target
        name: (identifier)
        (run_command
          option: (push)
          option: (secret
            value: (unquoted_string))
          command: (shell_fragment))))

==================
run array
==================

foo:
    RUN ["echo", "foo"]

---

    (source_file
      (target
        name: (identifier)
        (run_command
          command: (string_array
            (double_quoted_string)
            (double_quoted_string)))))
