test/corpus/save_artifact.txt
==================
save artifact
==================

foo:
    SAVE ARTIFACT /foo

---

    (source_file
      (target
        name: (identifier)
        (save_artifact_command
          src: (unquoted_string))))

==================
save artifact with dest
==================

foo:
    SAVE ARTIFACT /foo /bar

---

    (source_file
      (target
        name: (identifier)
        (save_artifact_command
          src: (unquoted_string)
          dest: (unquoted_string))))

==================
save artifact with dest as local
==================

foo:
    SAVE ARTIFACT /foo /bar AS LOCAL /bar

---

    (source_file
      (target
        name: (identifier)
        (save_artifact_command
          src: (unquoted_string)
          dest: (unquoted_string)
          local_dest: (unquoted_string))))

==================
save artifact with options
==================

foo:
    SAVE ARTIFACT --keep-ts --force /foo

---

    (source_file
      (target
        name: (identifier)
        (save_artifact_command
          option: (keep_ts)
          option: (force)
          src: (unquoted_string))))
