test/corpus/save_image.txt
==================
save image
==================

foo:
    SAVE IMAGE ghcr.io/glehmann/foo

---

    (source_file
      (target
        name: (identifier)
        (save_image_command
          image: (image_spec
            name: (image_name)))))

==================
save image with options
==================

foo:
    SAVE IMAGE --push ghcr.io/glehmann/foo:latest ghcr.io/glehmann/foo:1.2.3

---

    (source_file
      (target
        name: (identifier)
        (save_image_command
          option: (push)
          image: (image_spec
            name: (image_name)
            tag: (image_tag))
          image: (image_spec
            name: (image_name)
            tag: (image_tag)))))

==================
save image cache hint
==================

foo:
    SAVE IMAGE --cache-hint

---

    (source_file
      (target
        name: (identifier)
        (save_image_command
          option: (cache_hint))))

==================
save image with quoted string
==================

foo:
    SAVE IMAGE "ghcr.io/$org/foo"

---

    (source_file
      (target
        name: (identifier)
        (save_image_command
          image: (image_spec
            name: (image_name
              (double_quoted_string
                (expansion
                  (variable))))))))

==================
save image with quoted name and tag
==================

foo:
    SAVE IMAGE "ghcr.io/$org/foo":$tag

---

    (source_file
      (target
        name: (identifier)
        (save_image_command
          image: (image_spec
            name: (image_name
              (double_quoted_string
                (expansion
                  (variable))))
            tag: (image_tag
              (expansion
                (variable)))))))
