test/corpus/set.txt
==================
set command
==================

foo:
  SET foo=bar

---

    (source_file
      (target
        name: (identifier)
        (set_command
          name: (variable)
          value: (string
            (unquoted_string)))))
