test/corpus/version.txt
==================
version command
==================

VERSION 0.8

---

(source_file
  base_target: (block
    (version_command
      version: (version_major_minor))))

==================
version command with features
==================

VERSION --pass-args --try 0.8

---

    (source_file
      base_target: (block
        (version_command
          options: (options
            (feature_flag)
            (feature_flag))
          version: (version_major_minor))))


==================
version command multiline
==================

VERSION \
    --pass-args \
    --try \
    0.8

---

    (source_file
      base_target: (block
        (version_command
          (line_continuation)
          options: (options
            (feature_flag)
            (line_continuation)
            (feature_flag))
          (line_continuation)
          version: (version_major_minor))))
