test/corpus/volume.txt
==================
volume command
==================

foo:
  VOLUME /foo /bar

---

    (source_file
      (target
        name: (identifier)
        (volume_command
          (unquoted_string)
          (unquoted_string))))

==================
volume command array variant
==================

foo:
  VOLUME ["/foo", "/bar"]

---

    (source_file
      (target
        name: (identifier)
        (volume_command
          (string_array
            (double_quoted_string)
            (double_quoted_string)))))
