test/corpus/wait.txt
==================
wait command
==================
foo:
  WAIT
    RUN echo "foo"
  END

---

    (source_file
      (target
        name: (identifier)
        (block
          (wait_command
            (block
              (run_command
                command: (shell_fragment)))))))

==================
wait command empty
==================
foo:
  WAIT
  END

---

    (source_file
      (target
        name: (identifier)
        (block
          (wait_command))))

